<resources>
    <string name="app_name">GandiForwardManager</string>
    <string name="title_activity_domains">GandiForwardManager</string>

    <string name="domains">Domains</string>
    <string name="domain">Domain :</string>
    <string name="addresses">Addresses</string>
    <string name="address">Address :</string>
    <string name="dtargets">Default Targets :</string>
    <string name="mtargets">More Targets :</string>
    <string name="save">Save</string>


    <string name="search_title">Search</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_addresses">Addresses</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="actionDelete">Delete</string>
    <string name="actionSave">Save</string>
    <string name="actionCancel">Cancel</string>
</resources>