<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.GandiForwardManager.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.GandiForwardManager.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:id="@+id/align"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:paddingTop="10sp"
            android:paddingBottom="5sp"
            android:textSize="20sp"
            android:text="@string/domain"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25sp"
            android:paddingEnd="25sp"
            android:paddingBottom="10sp"
            android:layout_marginBottom="5sp"
            android:textSize="15sp"
            android:id="@+id/editDomain" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:paddingTop="10sp"
            android:paddingBottom="5sp"
            android:textSize="20sp"
            android:text="@string/address"/>

        <EditText
            android:id="@+id/editSource"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:paddingBottom="10sp"
            android:layout_marginBottom="5sp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:paddingTop="10sp"
            android:paddingBottom="5sp"
            android:textSize="20sp"
            android:text="@string/dtargets"/>

        <LinearLayout
            android:id="@+id/editFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:paddingBottom="10sp"
            android:orientation="vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:paddingTop="10sp"
            android:paddingBottom="5sp"
            android:textSize="20sp"
            android:text="@string/mtargets"/>

        <EditText
            android:id="@+id/editTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textSize="15sp"
            android:autofillHints="" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:contentDescription="@string/save" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>